(bug 49327) overlapping text after moderation on permalink-page of feedback
* The rendered expects the display target, which in the case of moderating on the permalink page, was incorrectly passed on (it was incorrectly identified as "article")
* The permalink details HTML was not inside the container that JS replaces the contents of after moderating feedback

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
@@ -1,7 +1,7 @@
 /*----- FEEDBACK LISTING ------*/
 
 /** Overall structure **/
-.articleFeedbackv5-feedback {
+.articleFeedbackv5-feedback .articleFeedbackv5-feedback-container {
 	overflow: hidden;
 	position: relative;
 	min-height: 115px;
@@ -58,7 +58,7 @@
 }
 
 /** Feedback row **/
-.articleFeedbackv5-feedback {
+.articleFeedbackv5-feedback .articleFeedbackv5-feedback-container {
 	padding: 0;
 	border-bottom: 1px solid #D6D7D5;
 
